# ats-scorer

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .sequelizerc  Dockerfile  package-lock.json  package.json  tsconfig.json
backend-py/: .dockerignore  Dockerfile  pyproject.toml
backend-py/alembic/: env.py
backend-py/alembic/versions/: 0ee7ab7a2b6a_baseline.py
backend-py/app/: config.py  main.py
backend-py/app/api/: admin.py  auth.py  deps.py  public.py  slug.py  webhook.py
backend-py/app/db/: models.py  session.py
backend-py/app/email/: ingest.py  mailpit_client.py
backend-py/app/llm/: gemini.py  html_to_text.py  key_pool.py  prompts.py
backend-py/app/pipeline/: candidate.py  evaluator.py  image_loader.py  orchestrator.py  parser_client.py  repo.py  submodels.py
backend-py/app/queue/: queue.py  worker.py
backend/config/: config.cjs
backend/migrations/: 20260618000000-init.js  20260618010000-pipeline-stage-string.js  20260619000000-evaluation-dimensions.js  20260619010000-application-unique-email-per-job.js  (+1 more)
backend/prisma/: schema.prisma
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
parser/: Dockerfile  pyproject.toml
parser/app/: extract.py  main.py
parser/app/pipelines/: basic_details.py  dates.py  extract_images.py  extract_links.py  extract_text.py  geometry.py  links_categorize.py  normalize.py  structure.py
parser/tests/: conftest.py  test_api.py  test_extract_images.py  test_extract_links.py  test_extract_service.py  test_extract_text.py  test_geometry.py
(+64 files in other folders)
