[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-backend-py"
version = "0.1.0"
description = "Python (FastAPI) backend for the ATS resume scorer. Runs alongside the Node backend against the same Postgres/Redis/parser."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "redis>=5.2",
    "arq>=0.26",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1",
    "selectolax>=0.3.27",
]

[tool.setuptools.packages.find]
include = ["app*"]
