[project]
name = "ats-parser"
version = "0.1.0"
description = "PDF extraction microservice for ATS Resume Scorer (PyMuPDF, extract-only)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
